tests/ui_board/snapshots/ui_board__snapshots__final_scroll_page_keeps_long_tail_and_insertion_row_without_blank_overscroll.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 349
expression: "snapshot(&mut fixture, 52, 16, ThemePreference::Dark)"
---
SIZE 52x16

TEXT
00││
01│  long 07 wraps with Grüße 界  and enough words for│
02│  the viewport│
03│⋮ long 08 wraps with Grüße 界  and enough words for│
04│  the viewport│
05│  long 09 wraps with Grüße 界  and enough words for│
06│  the viewport│
07│  ──────────────────────────────────────────────────│
08││
09│  after│
10││
11│                    + New thought│
12││
13│  proqi-ui-contract│
14│  3 thoughts · board · saving│
15│  n New   : Commands  ? Shortcuts│

STYLE RUNS
0: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-27 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=BOLD | 28-28 fg=Reset bg=Reset mod=NONE | 29-51 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=BOLD
2: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-51 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=BOLD
3: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-27 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=BOLD | 28-28 fg=Reset bg=Reset mod=NONE | 29-51 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=BOLD
4: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-51 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=BOLD
5: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-27 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=BOLD | 28-28 fg=Reset bg=Reset mod=NONE | 29-51 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=BOLD
6: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-51 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=BOLD
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-51 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
8: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-19 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 20-20 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 21-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
12: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
13: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
14: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-49 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 50-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
15: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-22 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 23-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
