tests/ui_board/snapshots/ui_board__snapshots__first_api_item_has_the_ordinary_board_focus_presentation.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 58
expression: "snapshot(&mut fixture, 48, 12, ThemePreference::Dark)"
---
SIZE 48x12

TEXT
00││
01│⋮ first API focus│
02││
03│                  + New thought│
04││
05││
06││
07││
08││
09│  proqi-ui-contract│
10│  1 thought · board · saved│
11│  n New   : Commands  ? Shortcuts│

STYLE RUNS
0: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-47 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-17 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 18-18 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 19-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-45 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 46-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-22 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 23-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
