tests/ui_board/snapshots/ui_board__snapshots__help_overlay_remains_composed_in_a_shallow_viewport.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 99
expression: "snapshot(&mut fixture, 42, 8, ThemePreference::Auto)"
---
SIZE 42x8

TEXT
00│┌ proqi shortcuts ─────────────────────[x]│
01││n       New         Enter/e Edit        ││
02││j/k     Move        J/K     Reorder     ││
03││y       Copy        x       Cut         ││
04││d       Delete      ⌘D      Duplicate   ││
05││Space   Select      u       Undo        ││
06││c       Collapse    /       Search      ││
07│└────────────────────────────────────────┘│

STYLE RUNS
0: 0-0 fg=Reset bg=Reset mod=NONE | 1-17 fg=Green bg=Reset mod=BOLD | 18-38 fg=Reset bg=Reset mod=NONE | 39-41 fg=Green bg=Reset mod=NONE
1: 0-0 fg=Reset bg=Reset mod=NONE | 1-1 fg=Green bg=Reset mod=NONE | 2-20 fg=Reset bg=Reset mod=NONE | 21-27 fg=Green bg=Reset mod=NONE | 28-41 fg=Reset bg=Reset mod=NONE
2: 0-0 fg=Reset bg=Reset mod=NONE | 1-3 fg=Green bg=Reset mod=NONE | 4-20 fg=Reset bg=Reset mod=NONE | 21-23 fg=Green bg=Reset mod=NONE | 24-41 fg=Reset bg=Reset mod=NONE
3: 0-0 fg=Reset bg=Reset mod=NONE | 1-1 fg=Green bg=Reset mod=NONE | 2-20 fg=Reset bg=Reset mod=NONE | 21-21 fg=Green bg=Reset mod=NONE | 22-41 fg=Reset bg=Reset mod=NONE
4: 0-0 fg=Reset bg=Reset mod=NONE | 1-1 fg=Green bg=Reset mod=NONE | 2-20 fg=Reset bg=Reset mod=NONE | 21-22 fg=Green bg=Reset mod=NONE | 23-41 fg=Reset bg=Reset mod=NONE
5: 0-0 fg=Reset bg=Reset mod=NONE | 1-5 fg=Green bg=Reset mod=NONE | 6-20 fg=Reset bg=Reset mod=NONE | 21-21 fg=Green bg=Reset mod=NONE | 22-41 fg=Reset bg=Reset mod=NONE
6: 0-0 fg=Reset bg=Reset mod=NONE | 1-1 fg=Green bg=Reset mod=NONE | 2-20 fg=Reset bg=Reset mod=NONE | 21-21 fg=Green bg=Reset mod=NONE | 22-41 fg=Reset bg=Reset mod=NONE
7: 0-41 fg=Reset bg=Reset mod=NONE
