tests/ui_board/snapshots/ui_board__snapshots__help_overlay_remains_composed_in_a_shallow_viewport_macos.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 214
expression: "snapshot(&mut fixture, 42, 8, ThemePreference::Auto)"
---
SIZE 42x8

TEXT
00│┌ proqi shortcuts ─────────────────────[x]│
01││i                     Inbox             ↑│
02││Cmd+Enter/s           Submit            ││
03││Shift+S               Submit & keep     ││
04││Cmd+Q/q               Quit              ││
05││Esc                   Close             ││
06││f                     Clean up spacing  ││
07│└────────────────────────────────────────┘│

STYLE RUNS
0: 0-0 fg=Reset bg=Reset mod=NONE | 1-17 fg=Green bg=Reset mod=BOLD | 18-38 fg=Reset bg=Reset mod=NONE | 39-41 fg=Green bg=Reset mod=NONE
1: 0-0 fg=Reset bg=Reset mod=NONE | 1-1 fg=Green bg=Reset mod=NONE | 2-40 fg=Reset bg=Reset mod=NONE | 41-41 fg=DarkGray bg=Reset mod=NONE
2: 0-0 fg=Reset bg=Reset mod=NONE | 1-11 fg=Green bg=Reset mod=NONE | 12-41 fg=Reset bg=Reset mod=NONE
3: 0-0 fg=Reset bg=Reset mod=NONE | 1-7 fg=Green bg=Reset mod=NONE | 8-41 fg=Reset bg=Reset mod=NONE
4: 0-0 fg=Reset bg=Reset mod=NONE | 1-7 fg=Green bg=Reset mod=NONE | 8-41 fg=Reset bg=Reset mod=NONE
5: 0-0 fg=Reset bg=Reset mod=NONE | 1-3 fg=Green bg=Reset mod=NONE | 4-41 fg=Reset bg=Reset mod=NONE
6: 0-0 fg=Reset bg=Reset mod=NONE | 1-1 fg=Green bg=Reset mod=NONE | 2-41 fg=Reset bg=Reset mod=NONE
7: 0-41 fg=Reset bg=Reset mod=NONE
