tests/ui_board/snapshots/ui_board__snapshots__help_overlay_remains_composed_in_a_shallow_viewport_portable.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 200
expression: "snapshot(&mut fixture, 42, 8, ThemePreference::Auto)"
---
SIZE 42x8

TEXT
00│┌ proqi shortcuts ─────────────────────[x]│
01││f                     Clean up spacing  ↑│
02││h                     Toggle footer     ││
03││Alt+↑                 Insert above      ││
04││Alt+↓                 Insert below      ││
05││Ctrl+↑                First thought     ││
06││Ctrl+↓                Last thought      ││
07│└────────────────────────────────────────┘│

STYLE RUNS
0: 0-0 fg=Reset bg=Reset mod=NONE | 1-17 fg=Green bg=Reset mod=BOLD | 18-38 fg=Reset bg=Reset mod=NONE | 39-41 fg=Green bg=Reset mod=NONE
1: 0-0 fg=Reset bg=Reset mod=NONE | 1-1 fg=Green bg=Reset mod=NONE | 2-40 fg=Reset bg=Reset mod=NONE | 41-41 fg=DarkGray bg=Reset mod=NONE
2: 0-0 fg=Reset bg=Reset mod=NONE | 1-1 fg=Green bg=Reset mod=NONE | 2-41 fg=Reset bg=Reset mod=NONE
3: 0-0 fg=Reset bg=Reset mod=NONE | 1-5 fg=Green bg=Reset mod=NONE | 6-41 fg=Reset bg=Reset mod=NONE
4: 0-0 fg=Reset bg=Reset mod=NONE | 1-5 fg=Green bg=Reset mod=NONE | 6-41 fg=Reset bg=Reset mod=NONE
5: 0-0 fg=Reset bg=Reset mod=NONE | 1-6 fg=Green bg=Reset mod=NONE | 7-41 fg=Reset bg=Reset mod=NONE
6: 0-0 fg=Reset bg=Reset mod=NONE | 1-6 fg=Green bg=Reset mod=NONE | 7-41 fg=Reset bg=Reset mod=NONE
7: 0-41 fg=Reset bg=Reset mod=NONE
