tests/ui_board/snapshots/ui_board__snapshots__inaccessible_attachment_has_a_plain_warning_snapshot.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 123
expression: "snapshot(&mut fixture, 60, 8, ThemePreference::Dark)"
---
SIZE 60x8

TEXT
00││
01│⋮ [Image 1 · inaccessible]│
02││
03││
04││
05│  proqi-ui-contract│
06│  1 thought · edit · saving│
07│  Esc Board  y Copy  x Cut  u Undo  : Commands│

STYLE RUNS
0: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-1 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 2-25 fg=Rgb(204, 160, 58) bg=Rgb(39, 40, 48) mod=BOLD | 26-59 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-57 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 58-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-4 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 5-12 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 13-13 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 14-20 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 21-21 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 22-27 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 28-28 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 29-35 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 36-36 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 37-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
