tests/ui_board/snapshots/ui_board__snapshots__inaccessible_attachment_has_a_plain_warning_snapshot@macos.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 96
expression: "snapshot(&mut fixture, 60, 8, ThemePreference::Dark)"
---
SIZE 60x8

TEXT
00│⋮ [Image 1 · inaccessible]│
01││
02││
03││
04││
05│  proqi-ui-contract│
06│  1 thought · edit · saving│
07│  Esc Board  Cmd+C Copy Cmd+X Cut Cmd+Z Undo│

STYLE RUNS
0: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-1 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 2-25 fg=Rgb(204, 160, 58) bg=Rgb(39, 40, 48) mod=BOLD | 26-59 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
1: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-57 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 58-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-4 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 5-12 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 13-17 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 18-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 24-28 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 29-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 34-38 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 39-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
