tests/ui_board/snapshots/ui_board__snapshots__indentation_fallbacks_are_visible_in_the_command_palette.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 484
expression: "snapshot(&mut fixture, 72, 14, ThemePreference::Dark)"
---
SIZE 72x14

TEXT
00││
01│⋮ - parent│
02│    -  ┌ commands ────────────────────────────────────────────[x]│
03│       │:dent line                                              ││
04│       │Indent line or selection                            edit││
05│       │Outdent line or selection                           edit││
06│       └────────────────────────────────────────────────────────┘│
07││
08││
09││
10││
11│  proqi-ui-contract│
12│  1 thought · board · saved│
13│  n New   y Copy  x Cut  d/Del  Space Select / Search  : Commands│

STYLE RUNS
0: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-71 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-5 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-61 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 62-64 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
3: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-7 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 8-17 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 18-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-7 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 8-31 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 32-59 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 60-63 fg=Rgb(176, 169, 160) bg=Rgb(39, 40, 48) mod=NONE | 64-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 60-63 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 64-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
12: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-69 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 70-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
13: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-17 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 18-18 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 19-24 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 25-29 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 30-31 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 32-36 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 37-44 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 45-45 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 46-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 55-55 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 56-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
